@@ -1,0 +1,4 @@
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<root>
+  <element name="elem2" attr1="updateValue">This is the updated XML file</element>
+</root>
