@@ -1,0 +1,5 @@
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<root>
+  <element name="elem1" attr1="workspaceValue" attr3="value3">This is the workspace XML file</element>
+  <element1 attr2="oldValue">Old text 1</element1>
+</root>
